[gd_scene format=3 uid="uid://csr8xnxhj2hj0"]

[ext_resource type="Script" uid="uid://bvypmq3d4gp56" path="res://Scripts/social_engineering_game.gd" id="1_c3wel"]
[ext_resource type="PackedScene" uid="uid://stv6av4qbqpi" path="res://Scenes/chat_bubble.tscn" id="2_pwh1a"]
[ext_resource type="StyleBox" uid="uid://c1o3b1l25om78" path="res://Styles/user_received.tres" id="3_hvdsn"]
[ext_resource type="StyleBox" uid="uid://ce73lpctu30s" path="res://Styles/user_sent.tres" id="4_tjdq7"]
[ext_resource type="StyleBox" uid="uid://btt4ywxs1fetj" path="res://Styles/user_blocked.tres" id="5_gc737"]
[ext_resource type="Resource" uid="uid://daws6mdi4n14l" path="res://Resource/chat_options.tres" id="5_tjdq7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c3wel"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_option_normal"]
bg_color = Color(0.2, 0.2, 0.25, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 0.1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_option_hover"]
bg_color = Color(0.3, 0.3, 0.4, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.6, 0.9, 0.5)

[node name="social_engineering_game" type="Node2D" unique_id=960416343 node_paths=PackedStringArray("scroll_container", "message_list", "option1", "option2", "option3")]
script = ExtResource("1_c3wel")
scroll_container = NodePath("Chatbox/PanelContainer")
message_list = NodePath("Chatbox/PanelContainer/VBoxContainer")
chat_bubble = ExtResource("2_pwh1a")
option1 = NodePath("Options/HBoxContainer/PanelContainer/Option1")
option2 = NodePath("Options/HBoxContainer/PanelContainer2/Option2")
option3 = NodePath("Options/HBoxContainer/PanelContainer3/Option3")
user_received = ExtResource("3_hvdsn")
user_sent = ExtResource("4_tjdq7")
user_blocked = ExtResource("5_gc737")
chat_texts = ExtResource("5_tjdq7")

[node name="BackgroundOverlay" type="ColorRect" parent="." unique_id=123456789]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.08, 0.08, 0.1, 0.95)

[node name="Chatbox" type="Control" parent="." unique_id=1164272293]
layout_mode = 3
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 1132.0
offset_bottom = 450.0

[node name="PanelContainer" type="ScrollContainer" parent="Chatbox" unique_id=1106459540]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_c3wel")
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Chatbox/PanelContainer" unique_id=313219371]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Options" type="Control" parent="." unique_id=1002492603]
layout_mode = 3
anchors_preset = 0
offset_top = 470.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="HBoxContainer" type="HBoxContainer" parent="Options" unique_id=484979321]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="PanelContainer" type="PanelContainer" parent="Options/HBoxContainer" unique_id=1203806740]
layout_mode = 2
size_flags_horizontal = 3

[node name="Option1" type="Button" parent="Options/HBoxContainer/PanelContainer" unique_id=2035777841]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_option_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_option_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_option_hover")
text = "Some Text Here"
autowrap_mode = 3

[node name="PanelContainer2" type="PanelContainer" parent="Options/HBoxContainer" unique_id=1766347139]
layout_mode = 2
size_flags_horizontal = 3

[node name="Option2" type="Button" parent="Options/HBoxContainer/PanelContainer2" unique_id=629847780]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_option_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_option_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_option_hover")
text = "Also Some Text"
autowrap_mode = 3

[node name="PanelContainer3" type="PanelContainer" parent="Options/HBoxContainer" unique_id=1568025050]
layout_mode = 2
size_flags_horizontal = 3

[node name="Option3" type="Button" parent="Options/HBoxContainer/PanelContainer3" unique_id=1107979236]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_option_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_option_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_option_hover")
text = "Some Text Here too"
autowrap_mode = 3

[connection signal="pressed" from="Options/HBoxContainer/PanelContainer/Option1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="Options/HBoxContainer/PanelContainer2/Option2" to="." method="_on_option_2_pressed"]
[connection signal="pressed" from="Options/HBoxContainer/PanelContainer3/Option3" to="." method="_on_option_3_pressed"]